<resources>
    <!-- App Strings -->
    <string name="app_name">MyBudgetV4</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="forget_password">Forget Password</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account? Sign up here.</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="App_logo">Logo</string>
    <string name="reg_form_submit">Submit</string>
    <string name="all_ready_have_a_account_sign_in_here">Already have an account? Sign In here.</string>
    <string name="reg_confirm_password">Confirm Password</string>
    <string name="reg_register_form">Registration</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="expenses">Expenses</string>
    <string name="income">Income</string>
    <string name="dashboard">Dashboard</string>
    <string name="home">Home</string>
    <string name="mybudget_header_name">MyBudget</string>
    <string name="income_menu">Income</string>
    <string name="expenses_menu">Expenses</string>
    <string name="report">Report</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="todo1">TODO</string>
    <string name="amount">Amount</string>
    <string name="expenses_type">Expenses Type</string>
    <string name="add_expenses">Add Expenses</string>
    <string name="add">Add</string>
    <string name="add_new_income">Add New Income</string>
    <string name="add_new_expenses">Add New Expenses</string>
    <string name="report_page">Report Page</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="description">Description</string>
    <string name="select_date">Select Date</string>
    <string name="don_t_have_an_account">Don\'t have an account..?</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="already_hav_an_account">Already have an account?</string>
    <string name="sign_in_here">Sign in here</string>
    <string name="full_name">Full Name</string>
    <string name="student_number">Student Number: 23011199</string>
    <string name="home1">Home</string>
    <string name="education">Education</string>
    <string name="helth">Helth</string>
    <string name="other">Other</string>
    <string name="health">Health</string>

</resources>
